--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-query": "^5.80.10",
+    "@tanstack/react-query-devtools": "^5.80.10",
     "axios": "^1.10.0",
     "formik": "^2.4.6",
-    "next": "15.4.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "framer-motion": "^12.19.1",
+    "next": "15.3.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-paginate": "^8.3.0",
-    "react-router-dom": "^7.6.2",
+    "react-spinners": "^0.17.0",
     "use-debounce": "^10.0.5",
     "yup": "^1.6.1"
   },
